ingress/ingress-kube-system.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: internmatch-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "internmatch-svc"
  namespace: kube-system
spec:
  tls:
    - hosts:
      - dashboard-interns.outcome-hub.com
      secretName: tls-certificate
  rules:
  - host: dashboard-interns.outcome-hub.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard 
          servicePort: 443
