ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: internmatch-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "internmatch-svc"
  namespace: staging
spec:
  tls:
    - hosts:
      - bridge-staging-interns.outcome-hub.com
      - qwanda-staging-interns.outcome-hub.com
      - keycloak-staging-interns.outcome-hub.com
      - interns-staging.outcome-hub.com
#      - mentor.outcome-hub.com
      secretName: tls-certificate
  rules:
  - host: bridge-staging-interns.outcome-hub.com
    http:
      paths:
      - path: /
        backend:
          serviceName: bridge-service
          servicePort: 8088
  - host: www.staging-internships.life
    http:
      paths:
      - path: /
        backend:
          serviceName: genny-web-service
          servicePort: 80
  - host: staging-internships.life
    http:
      paths:
      - path: /
        backend:
          serviceName: genny-web-service
          servicePort: 80
  - host: interns-staging.outcome-hub.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alyson-service
          servicePort: 80
  - host: keycloak-staging-interns.outcome-hub.com
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak-service
          servicePort: 80
  - host: qwanda-staging-interns.outcome-hub.com
    http:
      paths:
      - path: /
        backend:
          serviceName: qwanda-service
          servicePort: 8280
